# logits-processor-zoo

./: README.md  pyproject.toml
example_notebooks/transformers/: cite_prompt_logits_processor.ipynb  force_last_phrase_logits_processor.ipynb  gen_length_logits_processor.ipynb  multiple_choice_logits_processor.ipynb  prevent_hallucination_logits_processor.ipynb  trigger_phrase_logits_processor.ipynb  utils.py
example_notebooks/trtllm/: README.md  cite_prompt_logits_processor.py  gen_length_logits_processor.py  last_phrase_logits_processor.py  multiple_choice_logits_processor.py  prevent_hallucination_logits_processor.py  trigger_phrase_logits_processor.py  utils.py
example_notebooks/vllm/: cite_prompt_logits_processor.ipynb  prevent_hallucination_logits_processor.ipynb  text_retrieval_logits_processor.ipynb  trigger_phrase_logits_processor.ipynb  utils.py
examples/transformers/: max_time_logits_processor.ipynb  trigger_phrase_logits_processor.ipynb
examples/trtllm/: max_time_logits_processor.py  trigger_phrase_logits_processor.py
examples/vllm/: max_time_logits_processor.ipynb  trigger_phrase_logits_processor.ipynb
logits_processor_zoo/: utils.py
logits_processor_zoo/transformers/: base.py  cite_prompt.py  generation_length.py  max_time.py  multiple_choice.py  trigger_phrase.py
logits_processor_zoo/trtllm/: __init__.py  cite_prompt.py  generation_length.py  last_phrase.py  max_time.py  trigger_phrase.py
logits_processor_zoo/vllm/: __init__.py  eprime.py  generation_length.py  max_time.py  test_retrieval.py  trigger_phrase.py
(+3 files in other folders)
